Patched bug with vh units on Mobile Safari with a hacky polyfill.

--- a/source/sass/templates/_header.scss
+++ b/source/sass/templates/_header.scss
@@ -26,6 +26,10 @@
     // padding-top: 10%;
   }
 
+  @include breakpoint(48.0625em) {
+
+  }
+
   @include breakpoint($desktop) {
     max-width: 48.4848484848rem;
   }
